Make minor edits to short outlint.

--- a/PaperDraft/short.html
+++ b/PaperDraft/short.html
@@ -66,7 +66,7 @@
 </li>
 <li>Auditing should be regularly scheduled and should examine every document during every auditing cycle.<br />
 </li>
-<li>The recommended baseline for preserving collections over a very wide range of operational conditions: five copies, annual auditing, total auditing (i.e., all copies examined each cycle). The auditing cycles may be segmented to reduce variations in bandwidth required for auditing, so long as the sampling for segments is done without replacement.<br />
+<li>We recommend this baseline for preserving collections over a very wide range of operational conditions: five copies, annual auditing, total auditing (i.e., all copies examined each cycle). The auditing cycles may be segmented to reduce variations in bandwidth required for auditing, so long as the sampling for segments is done without replacement.<br />
 </li>
 <li>Excessively frequent auditing, e.g., weekly or monthly, is unnecessary overkill.<br />
 </li>
@@ -98,12 +98,12 @@
 </li>
 <li>Vary auditing strategy, from none to frequent, number of segments per cycle, and whether segment sampling is done with or without replacement.<br />
 </li>
-<li>Vary glitches, frequent or rare, minor or major, short or long, affecting the document error rates on single servers.</li>
-<li>Vary shocks, frequent or rare, minor or major, short or long, affecting the survival rate(s) of one or more servers at a time.<br />
+<li>Vary glitches, from frequent to rare, minor to major, short to long, affecting the document error rates on single servers.</li>
+<li>Vary shocks, from frequent to rare, minor to major, short to long, affecting the survival rate(s) of one or more servers at a time.<br />
 </li>
 <li>Vary document size and error rate together: larger docs should predictably represent bigger targets for random errors.<br />
 </li>
-<li>Each simulation cycle is repeated a number of times with different seeds for the pseudorandom number generator. It is initially performed with a modest sample size, approximately twenty; some cases have been sampled with much larger sample sizes for validation.<br />
+<li>Each simulation cycle is repeated a number of times with different seeds for the pseudorandom number generator. It is initially performed with a modest sample size, approximately twenty; some cases have been computed using much larger sample sizes for validation.<br />
 </li>
 <li>Simulations are performed with repeatable seeds for the pseudorandom number generator, to enable accurate replication of the experiments.<br />
 </li>
