Put old data and plots in new directories as starter sets.

--- a/PaperDraft/picturesneeded.htm
+++ b/PaperDraft/picturesneeded.htm
@@ -38,8 +38,8 @@ border-collapse: collapse;
 <td>1</td>
 <td>no audit requires too many copies</td>
 <td>losses by #copies</td>
-<td>copies=1,2,3,5,10, lifem2-1000</td>
-<td></td>
+<td>copies=1,2,3,5,10, lifem=2-1000</td>
+<td>pictures/noaudittoomany</td>
 </tr>
 <tr class="even">
 <td>2a</td>
@@ -60,56 +60,56 @@ border-collapse: collapse;
 <td>random auditing is less effective than total auditing</td>
 <td>total annual vs random</td>
 <td>random segments=4,10, dotted lines; total=solid line</td>
-<td></td>
+<td>pictures/randomaudit</td>
 </tr>
 <tr class="odd">
 <td>4</td>
 <td>annual auditing suffices</td>
 <td>total annual vs total qtly</td>
 <td>copies=3,4,5</td>
-<td></td>
+<td>pictures/annualauditsuffices</td>
 </tr>
 <tr class="even">
 <td>5</td>
 <td>segmented total auditing is slightly better</td>
 <td>annual with varying segments</td>
 <td>segments=1,2,4,10 show only marginal improvements</td>
-<td></td>
+<td>pictures/segmentedauditing</td>
 </tr>
 <tr class="odd">
 <td>6</td>
 <td>5 copies and annual auditing is effective</td>
 <td>lifem-losses plot, losses show zero from 10 to 1000 mhr lifetimes</td>
-<td>notes about &quot;you wouldn't use a disk this bad&quot; for &lt;10 and &quot;you can't buy a disk this good&quot; for &gt;1000</td>
-<td></td>
+<td>notes about &quot;you wouldn't use a disk this bad&quot; for &lt;10, and &quot;you can't buy a disk this good&quot; for &gt;1000</td>
+<td>pictures/fivecopieseffective</td>
 </tr>
 <tr class="even">
 <td>7</td>
 <td>docsize and error rates scale together linearly</td>
 <td>lifem-losses plot</td>
 <td>separate lines and colors for various doc sizes</td>
-<td></td>
+<td>pictures/docsizevserrorrate</td>
 </tr>
 <tr class="odd">
 <td>8</td>
 <td>glitches the same as increased error rates</td>
-<td>copies=3,4,5</td>
+<td>copies=3,4,5 maybe</td>
 <td>lines for no glitch, medium, and bad</td>
-<td></td>
+<td>pictures/glitches</td>
 </tr>
 <tr class="even">
 <td>9</td>
 <td>copies=1 losses over time</td>
 <td>copies=1 from garbage can lids to immortal disks</td>
-<td>lifem2-10000</td>
-<td></td>
+<td>lifem=2-10000 maybe 20 yrs too</td>
+<td>pictures/copies1</td>
 </tr>
 <tr class="odd">
 <td>10</td>
 <td>5 is enough but 4 is not</td>
-<td>lifem-losses copies4,5</td>
+<td>lifem-losses copies=4,5</td>
 <td>show errors down to 2 or 1 mhr</td>
-<td></td>
+<td>pictures/fourcopiesnotenough</td>
 </tr>
 <tr class="even">
 <td>11a</td>
@@ -144,14 +144,14 @@ border-collapse: collapse;
 <td>table: small vs large docs</td>
 <td>small matrix, cols=lifem, rows=5,50,500,5000MB</td>
 <td>losses in ppm</td>
-<td></td>
+<td>tables/docsize</td>
 </tr>
 <tr class="odd">
 <td>14</td>
 <td>table: calibration</td>
 <td>theoretical vs simulated results</td>
 <td>copies=1, 100 samples, vs straight Poisson, in ppm</td>
-<td></td>
+<td>tables/calibration</td>
 </tr>
 <tr class="even">
 <td>15</td>
