--- a/PaperDraft/howmany_NEW.htm
+++ b/PaperDraft/howmany_NEW.htm
@@ -147,7 +147,7 @@ padding-bottom: 3px;
 <p>Thou shalt not attend disk dealers who bear false witness of their reliability.</p>
 </blockquote>
 <blockquote>
-<p>Thou shalt respect the independence of thy vendors.</p>
+<p>Thou shalt respect and monitor the independence of thy vendors.</p>
 </blockquote>
 <blockquote>
 <p>Thou shalt befriend more vendors than thou currently doth engage, for they may be friends in lean years of woe and hardship.</p>
@@ -206,7 +206,7 @@ padding-bottom: 3px;
 </li>
 <li>The client has two strategies available to preserve the collection: to keep a small number of <em>copies</em> of the documents on very high quality storage, or to replicate many copies of the documents using available commercial data storage facilities. Very high quality storage may be very expensive or actually unobtainable; multiple copies on commercial storage may also be expensive, but such storage services are available commodities.<br />
 </li>
-<li>Documents are stored on <em>storage servers</em>, which currently reside largely on rotating disk memories. Storage servers attempt to make their storage more reliable by themselves using a variety of techniques, including duplication, mirroring, RAID, error correction coding, erasure coding, and other technologies that may become available.</li>
+<li>Documents are stored on <em>storage servers</em>, and currently reside largely on rotating disk memories. Storage servers attempt to make their storage more reliable by themselves using a variety of techniques, including duplication, mirroring, RAID, error correction coding, erasure coding, and other technologies that may become available.</li>
 <li>A client may <em>audit</em> a collection to determine if all the copies of documents stored on the server(s) are still readable. Such auditing may be accomplished in a variety of ways; see the section on Auditing Strategies.<br />
 </li>
 <li>An error in storage may cause a document or some portion of it to become unreadable. (For simplicity, we model that a single error in a document makes the document unreadable.) If all copies of a document are unreadable, then the document is permanently lost.</li>
@@ -226,22 +226,20 @@ padding-bottom: 3px;
 <li>It is possible that the failure rate within a server is not constant over time. However, over suitably short intervals, a changing rate can be approximated by some mean value in the interval.</li>
 </ul>
 <p>(Format obsolescence is not an inherent part of this model, but forms of it may be modeled through extensions involving associated failure. See below.)</p>
-<p>The model permits great variety in the structuring of the simulations. Not all possibilities have been used in the simulations reported here. A number of simplifications were used to reduce substantially the size of the problem space to be searched. For example, we report results for a single client library with a single collection of documents. Given the assumptions that clients, collections, and documents all are independent of each other, results for multiple clients, multiple collections, and varying sizes of collections can be extrapolated from these results. Similarly, early testing revealed that document size did not interact with other simulation parameters in any unforeseen ways; so we have reported results for a limited number of document sizes, along with guidelines for scaling document size relative to other adjustable parameters, such as sector error rate. See the section on &quot;Simplifying Assumptions.&quot;</p>
-<p>The model does not attempt to characterize individual disk drives, RAID sets, erasure code sets, or any other physical storage entities. Our investigations have dealt only with small errors that corrupt stored documents and large failures that destroy entire storage servers.</p>
 <h2 id="simple-and-complex-failures">Simple and Complex Failures</h2>
-<h3 id="simplest-case-sector-errors">simplest case: sector errors</h3>
+<h3 id="simplest-case-sector-errors">Simplest Case: Sector Errors</h3>
 <ul>
 <li>error corrupts a document sector, random arrival, Poisson model, think cosmic ray</li>
 <li>if the error occurs in a location occupied by a document, that document is gonzo</li>
 <li>errors are silent, no one notices until someone tries to read the document and discovers that it is broken</li>
 </ul>
-<h3 id="similar-case-glitches">similar case: glitches</h3>
+<h3 id="similar-case-glitches">Similar Case: Glitches</h3>
 <ul>
 <li>what is considered a glitch: temporary, short-lived, impacts a single server, increases sector error rate for a while, goes away</li>
 <li>types of glitches in server farms: HVAC weakness or failure, environmental contamination by chemicals, particles, radiation, electrical noise</li>
 <li>effect: glitch just increases the error rate slightly for a while, hard to distinguish from random variations in performance</li>
 </ul>
-<h3 id="complex-case-shocks">complex case: shocks</h3>
+<h3 id="complex-case-shocks">Complex Case: Shocks</h3>
 <ul>
 <li>what is a shock: temporary, short-lived, increases likelihood of server death (taking all documents down with it), may kill immediately, can impact more than one server at a time</li>
 <li>types of shocks: economic, natural disaster (fire, flood, earthquake, volcano, meteor, etc.), regional war, government interference, administrative error such as billing</li>
@@ -283,6 +281,8 @@ padding-bottom: 3px;
 </ul>
 <p>This entire simulation cycle is repeated a number of times using different values to seed the (pseudo-)random number generator that drives the simulation. The numbers from all runs are collected and presented in tabular form and in graphical summaries in the supplemental material.</p>
 <p>The model does not consider directly the costs of storage or bandwidth. These factors vary widely and change rapidly. Any conclusions based on specific numbers would become obsolete very quickly. However, some possibilities for minimizing or smoothing bandwidth consumption are considered.</p>
+<p>The model permits great variety in the structuring of the simulations. Not all possibilities have been used in the simulations reported here. A number of simplifications were used to reduce substantially the size of the problem space to be searched. For example, we report results for a single client library with a single collection of documents. Given the assumptions that clients, collections, and documents all are independent of each other, results for multiple clients, multiple collections, and varying sizes of collections can be extrapolated from these results. Similarly, early testing revealed that document size did not interact with other simulation parameters in any unforeseen ways; so we have reported results for a limited number of document sizes, along with guidelines for scaling document size relative to other adjustable parameters, such as sector error rate. See the section on &quot;Simplifying Assumptions.&quot;</p>
+<p>The model does not attempt to characterize individual disk drives, RAID sets, erasure code sets, or any other physical storage entities. Our investigations have dealt only with small errors that corrupt stored documents and large failures that destroy entire storage servers.</p>
 <hr />
 <h1 id="data-representation">Data Representation</h1>
 <p>The likelihood of an error in a disk bit or sector, or even the failure of an entire disk, is a very small number with many zeroes before the first significant digit. We choose to invert the error rate into a function of lifetime of that bit, or of a sector containing many bits. We feel that lifetime is more accessible to the reader and less error-prone than error rate. For example, a probability of a bit failing in a year of 10E-15 becomes a mean lifetime of 100E12 years.</p>
@@ -298,13 +298,11 @@ padding-bottom: 3px;
 <p>Auditing the collection to test the validity of remote copies of documents can greatly reduce permanent document losses over time. The auditing process actively patrols for errors before they cause permanent document losses, and corrects them whenever possible. A number of strategies for auditing are possible, and some are measurably better than others.</p>
 <p>In all cases, when a document copy is found to be absent (or corrupted), the auditing process attempts to replace the missing copy with a fresh copy obtained from another server. If there is an intact copy on another server, then the missing document is repaired and the process continues. If there is no other intact copy, then the document is considered permanently lost.</p>
 <p>Auditing is essential to maintaining the health of a collection. This is the method by which errors are detected and corrected. Without auditing, errors tend to build up in a collection and eventually cause some permanent document losses, regardless of how many copies of the documents we keep. We can think of the auditing process as health care for electronic documents: minor problems will be found and fixed before they cause permanent damage. Of course, it will always be possible for unlikely juxtapositions of errors to cause a document to be lost, but regular auditing of a modest number of copies can minimize permanent losses.</p>
-<ul>
-<li>simplest case: no auditing</li>
-</ul>
+<h2 id="simplest-case-no-auditing">Simplest Case: No Auditing</h2>
 <p>Without auditing and repair, errors will always cause copies to be lost. Multiple copies of a documents will reduce the likelihood of permanent loss, but the number of copies needed to forestall loss depends directly on the lifetime of storage sectors. With high storage error rates, for instance, sector half-lives less than 10E6 hours, no reasonable number of copies can prevent large numbers of permanent losses. Even with sector half-lives in the range of 10E6 hours, ten or more copies are needed to keep likely permanent losses near zero. If the storage is much more reliable, with sector half-life in the range 100E6 or 1000E6 hours, still at least four or five copies are needed to minimize losses. Given the uncertainty of storage error rates, particularly across servers and over time, the larger numbers of copies are probably required to protect collection documents.</p>
 <p>Note that all the figures stated here for times and lifetimes are based on arbitrary scales chosen for the simulations. The numbers should not be applied literally to your situations or experiences. Please see the section on &quot;Simplifying Assumptions&quot; for details on time scales, error rates, storage and document sizes, etc.</p>
-<h1 id="simple-case----independent-failures-just-plain-copies">Simple Case -- Independent Failures &amp; Just Plain Copies</h1>
-<h2 id="just-make-copies----no-auditing-too-many-copies-required">Just make copies -- no auditing? TOO MANY COPIES REQUIRED</h2>
+<h2 id="simple-case-independent-failures-just-plain-copies">Simple Case: Independent Failures &amp; Just Plain Copies</h2>
+<p>Just make copies -- no auditing? TOO MANY COPIES REQUIRED</p>
 <!-- START:TODO:RICK -->
 <p>TODO: Why did we choose this spectrum, which goes from rusty garbage-can lids to immortal disks.<br />
 <!-- END:TODO:RICK --></p>
@@ -313,8 +311,7 @@ padding-bottom: 3px;
 <p>Auditing, even at relatively low rates, changes the picture entirely. With a reasonable amount of auditing, five copies of a collection suffice to protect the collection from loss across a very wide range of error rates, starting with sector half-lives greater than 3E6 hours.</p>
 <p>[FIGURE: FIVE COPIES ARE ENOUGH]</p>
 <p>[FIGURE: ANNUAL AUDITING IS ENOUGH]</p>
-<h1 id="less-simple-case-total-auditing-random-by-popularity">less simple case: total auditing, random, by popularity</h1>
-<p>Common auditing strategies:</p>
+<h2 id="common-auditing-strategies">Common Auditing Strategies</h2>
 <ul>
 <li><p><strong>Total auditing</strong>: test all copies of all documents in the collection. This <em>auditing cycle</em> is usually repeated at regular intervals, such as annually, quarterly, monthly, etc.</p></li>
 <li><p><strong>(Systematic) segmented auditing</strong>: divide the collection into several segments, and test one segment at each interval. The whole collection is visited during the audit cycle, but only one segment at a time. For example, the collection may be divided into four segments; if each segment in turn is audited at quarterly intervals, then the entire collection will have been audited at the end of a yearly auditing cycle. Of course, more or fewer segments can be used: with an annual frequency, one segment is the same as annual auditing; twelve for monthly segmented auditing, and so forth.</p></li>
@@ -334,17 +331,17 @@ padding-bottom: 3px;
 <ul>
 <li><strong>Auditing by popularity</strong>: divide the collection into sub-collections that represent varying levels of document usage, e.g., small sub-collections for the documents most frequently accessed, medium size sub-collections for documents of intermediate popularity, and large sub-collections for documents rarely accessed. Permanent losses in the popular sub-collections would have much greater negative impact on the customer base. To reduce the likelihood of such expensive losses, the more popular (small) sub-collections of the collection can be audited more frequently than the others with little increased cost in bandwidth and time.</li>
 </ul>
-<p>Our simulations include tests of many auditing strategies, including total, segmented, and random. Tests differed in cycle frequency and in the parts of the collection audited during each segment or cycle.</p>
+<p>Our simulations tested many auditing strategies, including total, segmented, and random. Tests differed in cycle frequency and in the parts of the collection audited during each segment or cycle.</p>
 <ul>
 <li>All tests occurred on regular schedules.<br />
 </li>
 <li>Auditing cycles varied from monthly to biennially.<br />
 </li>
 <li>Segment counts were either one, two, four, ten, or fifty (corresponding to annual, semi-annual, quarterly, monthly, or weekly audits).</li>
-<li>Segments were chosen either systematically (the first quarter of the collection, the second quarter of the collection, etc.) or by uniform random selection with replacement. (This needs investigation; it has not been tested lately and thus may effectively be NYI.)</li>
+<li>Segments were chosen either systematically (the first quarter of the collection, the second quarter of the collection, etc.) or by uniform random selection with replacement.</li>
 </ul>
 <hr />
-<h1 id="observations">observations</h1>
+<h1 id="observations">Observations</h1>
 <h2 id="large-vs-small-collections-words">large vs small collections (words)</h2>
 <h2 id="large-vs-small-documents-picture">large vs small documents (picture)</h2>
 <h2 id="large-vs-small-storage-structures-words">large vs small storage structures (words)</h2>
