Update NewTrace to work on both Python2 and Python3, and improve self (cls, id) ident where appropriate. Update all references in running code to ntrace, ntracef, NTRC.

--- a/PaperDraft/howmany_NEW.htm
+++ b/PaperDraft/howmany_NEW.htm
@@ -45,39 +45,34 @@ padding-bottom: 3px;
 <li>Summary Of Specific Recommendations <!-- START:TODO:MICAH --></li>
 </ul>
 <p>TBS</p>
-<blockquote>
-<p>Thou shalt keep multiple copies of thy documents.</p>
-</blockquote>
-<blockquote>
-<p>Thou shalt visit thy documents fully and regularly, and keep them healthy.</p>
-</blockquote>
-<blockquote>
-<p>Thou shalt lovingly squeeze and compress thy documents, that they may be better protected from the elements.</p>
-</blockquote>
-<blockquote>
-<p>Thou shalt not heed disk dealers who bear false witness of their reliability. Rather, thou shalt heed the measurement of thine own experience and that of thy neighbors.</p>
-</blockquote>
-<blockquote>
-<p>Thou shalt respect and monitor the independence of thy vendors.</p>
-</blockquote>
-<blockquote>
-<p>Thou shalt be wary that vendors are ephemeral. Therefore shalt thou befriend more vendors than thou currently doth engage, for they may be friends in lean years of woe and hardship.</p>
-</blockquote>
-<blockquote>
-<p>Thou shalt cloak thy documents, if they be shy, in secret robes to keep them from prying eyes.</p>
-</blockquote>
-<blockquote>
-<p>Thou shalt engage with thy community to develop standards for the benefit of all.</p>
-</blockquote>
-<blockquote>
-<p>Thou shalt insure against unforeseen circumstances that thou canst not control.</p>
-</blockquote>
-<blockquote>
-<p>Yonder nor sorghum stenches shoe dentine tension beep aide tooth is.</p>
-</blockquote>
+<ol style="list-style-type: lower-roman">
+<li><p>Thou shalt keep multiple copies of thy documents.</p></li>
+<li><p>Thou shalt visit thy documents fully and regularly, and keep them healthy.</p></li>
+<li><p>Thou shalt lovingly squeeze and compress thy documents, that they may be better protected from the elements.</p></li>
+<li><p>Thou shalt not heed disk dealers who bear false witness of their reliability. Rather, thou shalt heed the measurement of thine own experience and that of thy neighbors.</p></li>
+<li><p>Thou shalt respect and monitor the independence of thy vendors.</p></li>
+<li><p>Thou shalt be wary that vendors are ephemeral. Therefore shalt thou befriend more vendors than thou currently doth engage, for they may be friends in lean years of woe and hardship.</p></li>
+<li><p>Thou shalt cloak thy documents, if they be shy, in secret robes to keep them from prying eyes.</p></li>
+<li><p>Thou shalt engage with thy community to develop standards for the benefit of all.</p></li>
+<li><p>Thou shalt insure against unforeseen circumstances that thou canst not control.</p></li>
+<li><p>Yonder nor sorghum stenches shoe dentine tension beep aide tooth is.</p></li>
+</ol>
 <!-- END:TODO:MICAH -->
 <!-- BEGIN:TODO:RICK -->
 <p>TBS: NOTES</p>
+<p>ref cmdmts in the recommendation paras. have to number the commandments to do this.</p>
+<p>mult copies deteriorate unless you take action to repair errors. how do you make repairs? first, find them by auditing.</p>
+<p>clearer about transition to multiple copies and auditing.<br />
+visit = audit multiple copies = multiple copies</p>
+<p>trust but verify = audit</p>
+<p>wide range described briefly here, more below either right before or right after how did we get this range</p>
+<p>long period = what 100 yrs will always lose 10 years reasonable horizon for known technologies, who knows what will be invented in the meantime. but if error rates don't change much, the same metrics apply.</p>
+<p>mfrs error rates are probably per the service lifetime of the disk. only if we read the bits or all bits?<br />
+suppose the 10E-14 refers where is the high end of the of the sector halflife range?</p>
+<p>need a way to rule out one copy on a really good disk.</p>
+<p>2% of disks fail every year. what does this say about sector error rate?</p>
+<p>suppose we had two copies on the best disks we can find and migrate them within the service period.</p>
+<p>justify if possible the choice of megabyte sectors and the range? maybe a disk is just a 10tb sector and fails at one time,</p>
 <ul>
 <li><p>Anything mentioned in a commandment should have a pretty clear target section.</p></li>
 <li><p>Minimize the intro text to what is needed to understand the commandments so far. Example need only sector errors to motivate multiple copies and auditing. Introduce other types of errors and auditing later.</p></li>
@@ -176,7 +171,7 @@ padding-bottom: 3px;
 </ul>
 <h2 id="what-level-of-storage-quality-is-reasonable">What Level of Storage Quality is Reasonable?</h2>
 <p>TBS</p>
-<h3 id="dont-believe-manufacturers">Don't Believe Manufacturers</h3>
+<h3 id="dont-believe-manufacturers-or-cloud-vendors">Don't Believe Manufacturers or Cloud Vendors</h3>
 <h3 id="dont-believe-tricky-statistics">Don't Believe Tricky Statistics</h3>
 <h3 id="do-believe-the-experience-of-others">Do Believe the Experience of Others</h3>
 <h1 id="details-of-the-structure-of-the-model">Details of the Structure of the Model</h1>
