--- a/PaperDraft/howmany_NEW.htm
+++ b/PaperDraft/howmany_NEW.htm
@@ -91,9 +91,22 @@ padding-bottom: 3px;
 <li>where is the high end of the of the sector halflife range?</li>
 </ul></li>
 <li><p>need a way to rule out one copy on a really good disk.</p></li>
-<li><p>2-3% of disks fail every year. what does this say about sector error rate?</p></li>
+<li>2-3% of disks fail every year. what does this say about sector error rate?<br />
+</li>
+<li>[Backblaze stats a lot more complicated than that. Aggregate half-life of disks seems to be 6-7 years, but that is heavily influenced by infant failures. If a drive survives infancy, then its wear-out half-life is more like 10-12 years. See spreadsheets I did on this topic.]</li>
+<li>[backblaze numbers:
+<ul>
+<li>infant failures first 1.5 years: 5%/yr</li>
+<li>adulthood very reliable up to 3 years: 1.4%/yr</li>
+<li>wear-out rate high after 3 years: 12%/yr]</li>
+</ul></li>
+<li><p>[they have published more recent stats, but not broken it down this way.]</p></li>
 <li><p>suppose we had two copies on the best disks we can find and migrate them within the service period.</p></li>
 <li><p>justify if possible the choice of megabyte sectors and the range? maybe a disk is just a 10TB sector and fails at one time; well oops does not fit the current model where sector is part of a single document</p></li>
+<li>try to swag the failure rate of a second drive during raid5 rebuild.</li>
+<li>[how long does a rebuild take these days? how many of the mongo disks in a raid5 array?]</li>
+<li>[What is the typical disk size these days? new backblaze number say 8TB or more.]</li>
+<li><p>[do people still use raid5 or have they migrated to erasure coding controllers that can tolerate &gt;1 failure so rebuild is not vulnerable to a second failure?]</p></li>
 <li><p>Don't sweat the small stuff, glitches are covered by protection over a wide range.</p></li>
 </ul>
 <!-- END:TODO:RICK -->
@@ -327,7 +340,7 @@ padding-bottom: 3px;
 <p>TBS</p>
 <h3 id="how-far-into-the-future-should-we-look">How Far Into the Future Should We Look?</h3>
 <p>TBS</p>
-<h3 id="exceptional-but-realistic-conditions">Exceptional but Realistic Conditions</h3>
+<h3 id="exceptional-but-realistic-conditions-major-shocks">Exceptional but Realistic Conditions: Major Shocks</h3>
 <ul>
 <li>shocks that weaken or kill whole servers, multiple servers</li>
 <li>regional: depression, war, earthquake, flood, etc.</li>
@@ -335,7 +348,7 @@ padding-bottom: 3px;
 </ul>
 <p>TBS</p>
 <h2 id="audit-and-repair-the-multiple-copies">Audit and Repair the Multiple Copies</h2>
-<h3 id="the-process-auditing-and-repairing">The Process Auditing and Repairing</h3>
+<h3 id="the-process-of-auditing-and-repairing">The Process of Auditing and Repairing</h3>
 <p>Auditing the collection to test the validity of remote copies of documents can greatly reduce permanent document losses over time. Without auditing and its attendant repair of damaged documents, minor errors will cause a stored collection to continue to decline over time with no barrier to extinction. No number of redundant copies without auditing, certainly no <em>reasonable</em> number, will prevent significant document losses over a long period. In addition, shocks to the system may cause servers to fail, thus reducing the actual number of active copies of a collection and accelerating further deterioration.</p>
 <p>Auditing is essential to maintaining the health of a collection. This is the method by which errors are detected and corrected. Without auditing, errors tend to build up in a collection and eventually cause some permanent document losses, regardless of how many copies of the documents we keep. We can think of the auditing process as health care for electronic documents: minor problems will be found and fixed before they cause permanent damage. Of course, it will always be possible for unlikely juxtapositions of errors to cause a document to be lost, but regular auditing of a modest number of copies can minimize permanent losses.</p>
 <p>The auditing process actively patrols for errors before they cause permanent document losses, and corrects them whenever possible. In all cases, when a document copy is found to be absent (or corrupted), the auditing process attempts to replace the missing copy with a fresh copy obtained from another server. If there is an intact copy on another server, then the missing copy is repaired and the process continues. If there is no other intact copy, then the document is considered permanently lost.</p>
@@ -345,7 +358,7 @@ padding-bottom: 3px;
 <h2 id="how-many-copies-to-keep-with-auditing">How Many Copies to Keep With Auditing</h2>
 <p>Over a very wide range of storage quality conditions (storage error rates or sector half-lives), our experiments show that five copies with annual total auditing reduce document loss rates to negligible levels.</p>
 <p><strong>Exhibit XX</strong> compares the effect of number of audited copies and storage error rates on document loss rates.</p>
-<h2 id="document-size-compression-encryption">Document Size, Compression, Encryption</h2>
+<h2 id="the-impacts-of-document-size-compression-encryption">The Impacts of Document Size, Compression, Encryption</h2>
 <p>What are the effects of compressing and/or encrypting documents? Lossless compression is almost always a good strategy for long-term storage of documents.</p>
 <h3 id="compression-reduces-the-target-area-of-a-document">Compression Reduces the Target Area of a Document</h3>
 <p>A large document occupies more storage than a small document. If errors are striking storage uniformly randomly, then a large document is proportionally a larger target. This effect is verified empirically by our experiments.</p>
@@ -367,7 +380,7 @@ padding-bottom: 3px;
 <li>An encrypted document is more fragile in the sense that it, if damaged by an error, it may not be recoverable even with extraordinary efforts. (Contrast with text documents, still photo, video, and audio files.)</li>
 <li>A collection of encrypted documents is more subject to large shocks, associated failures where multiple servers are immediately affected. E.g., losing the encryption keys can cause all the copies on several servers to be irretrievable.</li>
 </ul>
-<h2 id="what-level-of-storage-quality-is-reasonable">What Level of Storage Quality is Reasonable?</h2>
+<h2 id="how-to-judge-level-of-storage-quality">How to Judge Level of Storage Quality</h2>
 <p>TBS</p>
 <h3 id="dont-believe-manufacturers-or-cloud-vendors">Don't Believe Manufacturers or Cloud Vendors</h3>
 <h4 id="dont-believe-tricky-statistics">Don't Believe Tricky Statistics</h4>
